--- a/scripts/app-config-prod.json
+++ b/scripts/app-config-prod.json
@@ -1,7 +1,7 @@
 {
   "App": {
     "Name": "SCANOSS GO API Server",
-    "Port": "5443",
+    "Port": "8083",
     "Addr": "",
     "Debug": false,
     "Trace": false,
@@ -22,6 +22,7 @@
   "Scanning": {
     "WfpLoc": "",
     "ScanBinary": "scanoss",
+    "ScanningURL": "http://localhost:8083/api",
     "ScanDebug": false,
     "ScanFlags": 0,
     "ScanTimeout": 180,
